--- a/sass/layout/sections/_section_home.scss
+++ b/sass/layout/sections/_section_home.scss
@@ -37,7 +37,7 @@
     border-radius: 5px;
 }
 
-section {
+.section2 {
     padding: 50px 11% 80px; // Ajusta el relleno según sea necesario
     .grid-container {
         display: grid;
