--- a/css/style.css
+++ b/css/style.css
@@ -54,37 +54,43 @@ html::-webkit-scrollbar {
   position: relative;
   z-index: 0; }
   .home .img {
-    flex: 1 1 300px; }
+    flex: 1 1 300px;
+    margin-left: 60px; }
     .home .img img {
-      width: 100%;
-      margin-left: 60px; }
+      width: 100%; }
+  .home .home-content {
+    flex: 1 1 400px;
+    margin-top: 30px; }
+    .home .home-content h3 {
+      font-size: 40px;
+      font-weight: 700; }
+      .home .home-content h3 span {
+        color: #e53937; }
+  .home #home-btn {
+    padding: 10px;
+    text-decoration: none;
+    background: #e53937;
+    color: white;
+    border-radius: 5px; }
 
-.home-content {
-  flex: 1 1 400px;
-  margin-top: 30px; }
-  .home-content h3 {
-    font-size: 40px;
-    font-weight: 700; }
-    .home-content h3 span {
-      color: #e53937; }
-
-#home-btn {
-  padding: 10px;
-  text-decoration: none;
-  background: #e53937;
-  color: white;
-  border-radius: 5px; }
-
-section {
+.section2 {
   padding: 50px 11% 80px; }
-  section .grid-container {
+  .section2 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px; }
-    section .grid-container img {
+    .section2 .grid-container img {
       width: 100%;
       height: auto;
       border-radius: 10px; }
+
+@media screen and (max-width: 885px) {
+  .home .img {
+    flex-basis: 100%;
+    margin-left: 0;
+    margin-bottom: 20px; }
+    .home .img img {
+      margin-left: 0; } }
 
 .top-section {
   padding: 10px 11% 100px; }
